# silo

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json
data/docs/: lorem_ipsum.docx
data/plain_text/: lorem_ipsum.txt
documentation/: FUNCTIONAL_REQUIREMENTS.md
silo-app/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
silo-app/src/: App.css  App.tsx
silo-app/src-tauri/: Cargo.toml  tauri.conf.json
silo-app/src-tauri/src/: lib.rs  main.rs
silo-app/src/components/: HeaderControls.tsx  Upload.tsx  UploadCard.tsx
silo-app/src/components/header/: HeaderControls.tsx
silo-app/src/components/ui/: dropdown-menu.tsx
silo-app/src/store/: useSearchStore.ts
silo-core/: Cargo.toml
silo-core/src/: error.rs  lib.rs
silo-core/src/ingestion/: plain_text.rs
silo-core/src/vector_store/: qdrant.rs
silo-desktop/: Cargo.toml
silo-web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
silo-web/src/: App.tsx
