[package]
name = "silo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# PDFs, DOCX, Excel
calamine = "0.33.0"
lopdf = "0.39.0"

# Text Processing
regex = "1.12.3"
textwrap = "0.16.2"

# Vector Search
qdrant-client = "1.16.0"

# Text Search / Hybrid
tantivy = "0.25.0"

# Error Handling
thiserror = "2.0.18"
